<resources>
    <string name="app_name">Red Drop</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="need_donor">Need Donor</string>
    <string name="select_no_units">Select number of units required: </string>
    <string name="select_blood_group">Select blood group: </string>
    <string name="address">Address :</string>
    <string name="title_activity_donor_home">Red Drop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nearby_donation_centers">Nearby Donation Centers</string>
    <string name="my_next_donation_date">My Next Donation Date</string>
    <string name="logout">Log Out</string>
    <string name="login">Login</string>
    <string name="please_fill_up_the_below_form_inorder_to_search_for_donors">Please fill up the below form inorder to search for donors:</string>
    <string name="please_enter_your_already_registered_email_address_and_hit_the_button_below_you_ll_get_an_email_with_a_link_for_resetting_a_new_password">Please enter your email address and hit the button below. You\'ll get an email with a link for password reset.</string>
    <string name="reset">Reset</string>
    <string name="nearby_requests">Nearby Requests</string>
    <string name="all_requests">All Requests</string>
    <string name="my_donations">My Donations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
