<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.clairvoyant.reddrop.DonorHomeActivity">

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_need_donor"
        android:orderInCategory="100"
        android:title="@string/need_donor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list_donation_centers"
        android:orderInCategory="100"
        android:title="@string/nearby_donation_centers"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_next_donation_date"
        android:orderInCategory="100"
        android:title="@string/my_next_donation_date"
        app:showAsAction="never" />

</menu>
